--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,12 +107,42 @@ a {
   margin-top: 2em;
 }
 
+.flexslider {
+	background:none !important;
+	border:none !important;
+}
+
+.modal-flat {
+  width: 100%;
+  margin: 0;
+}
+
+.modal-content-flat {
+  border: 0;
+  border-radius: 0;
+  -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, .5);
+          box-shadow: 0 2px 4px rgba(0, 0, 0, .5);
+}
+
+.modal.fade .modal-dialog {
+    top: -150px;
+    opacity: 1;
+    -webkit-transition: all 0.2s;
+    -moz-transition: all 0.2s;
+    transition: all 0.2s;
+}
+
+.modal.fade.in .modal-dialog {
+    -webkit-transform: translate3d(0, 150px, 0);
+    transform: translate3d(0, 150px, 0);
+}
+
 /* * * * * * * * * * *
  *                   *
  *    ANIMATIONS     *
  *                   *
  * * * * * * * * * * */
-.tile,
+/*.tile,
 .tile.ng-move,
 .tile.ng-enter,
 .tile.ng-leave {
@@ -137,7 +167,7 @@ a {
 .message.ng-hide {
   -webkit-transition:all linear 0.3s;
   transition:all linear 0.3s;
-}
+}*/
 
 .message.ng-show {
   opacity:0;
@@ -145,9 +175,4 @@ a {
 
 .message.ng-hide {
   opacity:1;
-}
-
-.flexslider {
-	background:none !important;
-	border:none !important;
 }
