--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,13 @@
 .search,
 .tags,
-.options,
-.tile-container {
+.options {
   margin: 0;
   margin-top: 0.6em;
+}
+
+.control-container {
+  margin: 0;
+  margin-top: 1.2em;
 }
 
 .label {
