--- a/assets/css/flexslider.css
+++ b/assets/css/flexslider.css
@@ -75,7 +75,6 @@ html[xmlns] .flexslider .slides {
  * DEFAULT THEME
  * ====================================================================================================================*/
 .flexslider {
-  margin: 0 0 25px;
   background: #ffffff;
   border: 4px solid #ffffff;
   position: relative;
@@ -87,6 +86,9 @@ html[xmlns] .flexslider .slides {
   -moz-box-shadow: '' 0 1px 4px rgba(0, 0, 0, 0.2);
   -o-box-shadow: '' 0 1px 4px rgba(0, 0, 0, 0.2);
   box-shadow: '' 0 1px 4px rgba(0, 0, 0, 0.2);
+}
+.flexslider-multi {
+  margin: 0 0 25px;
 }
 .flexslider .slides {
   zoom: 1;
