--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,14 +38,17 @@
   page-break-inside: avoid;
   break-inside: avoid;
   display: inline-block;
+  padding-top: 0.2em;
 }
 
 .tile-title {
-  padding-bottom: 0.5em;
+  padding-bottom: 0.2em;
+  margin: 0;
+  padding: 0;
 }
 
 .tile-description {
-  padding: 0.8em;
+  padding: 0.5em;
   font-size: 0.95em;
 }
 
@@ -90,7 +93,6 @@ a {
 }
 .single-control-report {
   margin-top: 3em;
-  margin-bottom: 3em;
 }
 
 .help-content {
