--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,15 +91,18 @@ a {
   margin-top: 2em;
 }
 .single-control-title {
-  margin-top: 0;
-  padding-top: 0;
+  margin-bottom: 0;
 }
 .single-control-report {
   margin-top: 3em;
 }
 .single-control-info p {
-  font-size: 0.8em;
+  font-size: 0.9em;
   margin: 0.1em;
+}
+.single-control-tags,
+.single-control-src-btn {
+  margin-top: 1em;
 }
 
 .help-content {
