--- a/app/layout/menu.html
+++ b/app/layout/menu.html
@@ -1,4 +1,4 @@
 <div class="topright">
   <a class="btn btn-info btn-xs btn-embossed" href=""  data-toggle="modal" data-target="#tips-modal">Tip</a>
-  <a class="btn btn-danger btn-xs btn-embossed" href="" data-toggle="modal" data-target="#help-modal">Help</a>
+  <a class="btn btn-success btn-xs btn-embossed" href="" data-toggle="modal" data-target="#about-modal">About</a>
 </div>
