--- a/content/css/style.css
+++ b/content/css/style.css
@@ -86,6 +86,10 @@ a {
   right: 1.5em;
 }
 
+.settings-row {
+  margin-top: 0.3em;
+}
+
 .single-control-description,
 .single-control-images {
   margin-top: 2em;
