--- a/app/layout/footer.html
+++ b/app/layout/footer.html
@@ -3,6 +3,6 @@
     <small>Curated by <a href="http://lyxit.se">Lyxit</a></small>
   </div>
   <div class="row">
-    <small><a href="#/tos">Terms of Service</a> - <a href="#/privacy">Privacy Policy</a></small>
+    <small><a href="/tos">Terms of Service</a> - <a href="/privacy">Privacy Policy</a></small>
   </div>
 </div>
