--- a/content/css/style.css
+++ b/content/css/style.css
@@ -1,6 +1,6 @@
 .search,
-.tags,
-.options {
+.options,
+.tags {
   margin: 0;
   margin-top: 0.6em;
 }
@@ -12,6 +12,12 @@
 
 .label {
   margin: 2px;
+  display: inline-block;
+  white-space: normal;
+}
+
+.tile-hot-ribbon {
+  z-index: 10;
 }
 
 .tag {
@@ -30,13 +36,7 @@
 }
 
 .tile {
-  margin-top: 0.5em;
-  margin-bottom: 1em;
-  margin-right: 0.2em;
-  margin-left: 0.2em;
-  -webkit-column-break-inside: avoid;
-  page-break-inside: avoid;
-  break-inside: avoid;
+  float: left;
   display: inline-block;
   padding-top: 0.2em;
 }
